security(webui): add session auth with CSRF protection
Protect all /webui/* endpoints with session-based authentication:
- Login form at /webui/login validates against mgmt_username/mgmt_password
- In-memory session store with HttpOnly/SameSite=Lax cookie
- Browser-session lifetime (cookie expires when browser closes)
- CSRF token required on all POST/PUT/DELETE/PATCH requests
- Frontend fetch wrapper auto-injects X-CSRF-Token and redirects on 401
- 59 tests passing (28 new auth tests + 31 existing updated)

--- a/soundcork/webui/static/index.html
+++ b/soundcork/webui/static/index.html
@@ -21,6 +21,10 @@
         <span class="nav-icon">&#x2699;</span>
         <span class="nav-label">Config</span>
       </a>
+      <a href="#" class="nav-item nav-logout" id="logout-btn" title="Sign out">
+        <span class="nav-icon">&#x23FB;</span>
+        <span class="nav-label">Logout</span>
+      </a>
     </nav>
     <main id="main"></main>
   </div>
