feat(auth): add OIDC/SSO authentication for WebUI
- Add authlib dependency for OIDC authorization code flow with PKCE
- New /auth/login, /auth/callback, /auth/config routes (soundcork/oidc.py)
- OIDC is opt-in via OIDC_ISSUER_URL, OIDC_CLIENT_ID, OIDC_CLIENT_SECRET
  env vars — when not set, falls back to existing password login
- Works with any OIDC provider (Authentik, Keycloak, Auth0, etc.) via
  .well-known/openid-configuration discovery
- Login page shows SSO button when OIDC enabled, password form otherwise
- CSRF token delivered via cookie for OIDC flow, app.js reads from both
  sessionStorage and cookie
- 16 new tests covering config, redirects, error handling, IP exemptions
- All 76 tests passing, 0 lint errors

--- a/soundcork/webui/static/login.html
+++ b/soundcork/webui/static/login.html
@@ -76,6 +76,31 @@
       margin-bottom: 1rem;
       display: none;
     }
+    .login-divider {
+      display: flex;
+      align-items: center;
+      margin: 1.25rem 0;
+      color: var(--text-secondary);
+      font-size: 0.8rem;
+    }
+    .login-divider::before,
+    .login-divider::after {
+      content: '';
+      flex: 1;
+      border-bottom: 1px solid var(--border-color);
+    }
+    .login-divider span {
+      padding: 0 0.75rem;
+    }
+    .sso-btn {
+      background: var(--bg-input);
+      color: var(--text-primary);
+      border: 1px solid var(--border-color);
+    }
+    .sso-btn:hover {
+      background: var(--bg-secondary);
+    }
+    .hidden { display: none !important; }
   </style>
 </head>
 <body>
@@ -83,15 +108,42 @@
     <h1>SoundCork</h1>
     <p>Sign in to manage your speakers</p>
     <div class="login-error" id="error"></div>
-    <form id="login-form">
-      <label for="username">Username</label>
-      <input type="text" id="username" name="username" autocomplete="username" required autofocus>
-      <label for="password">Password</label>
-      <input type="password" id="password" name="password" autocomplete="current-password" required>
-      <button type="submit">Sign in</button>
-    </form>
+
+    <!-- SSO button (shown when OIDC is enabled) -->
+    <div id="sso-section" class="hidden">
+      <a href="/auth/login">
+        <button type="button" class="sso-btn" id="sso-btn">Sign in with SSO</button>
+      </a>
+    </div>
+
+    <!-- Password form (shown when OIDC is disabled, or as fallback) -->
+    <div id="password-section">
+      <form id="login-form">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" autocomplete="username" required autofocus>
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" autocomplete="current-password" required>
+        <button type="submit">Sign in</button>
+      </form>
+    </div>
   </div>
   <script>
+    // Check if OIDC is enabled and show the appropriate login method
+    (async function() {
+      try {
+        const resp = await fetch('/auth/config');
+        if (resp.ok) {
+          const config = await resp.json();
+          if (config.oidcEnabled) {
+            document.getElementById('sso-section').classList.remove('hidden');
+            document.getElementById('password-section').classList.add('hidden');
+          }
+        }
+      } catch (e) {
+        // If /auth/config fails, just show the password form (safe default)
+      }
+    })();
+
     const form = document.getElementById('login-form');
     const errorEl = document.getElementById('error');
     form.addEventListener('submit', async (e) => {
